modules/tectonic/resources/manifests/monitoring/prometheus-operator.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus-operator
  namespace: tectonic-system
  labels:
    k8s-app: prometheus-operator
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: prometheus-operator
    spec:
      serviceAccountName: prometheus-operator
      containers:
       - name: prometheus-operator
         image: ${prometheus_operator_image}
         args:
         - "--kubelet-object=kube-system/kubelet"
         - "--config-reloader-image=${config_reload_image}"
         resources:
           requests:
             cpu: 100m
             memory: 50Mi
           limits:
             cpu: 200m
             memory: 300Mi
