modules/tectonic/resources/manifests/monitoring/tectonic-monitoring-auth-alertmanager-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tectonic-monitoring-auth-alertmanager
  namespace: tectonic-system
  labels:
    k8s-app: tectonic-monitoring-auth-alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: tectonic-monitoring-auth-alertmanager
  template:
    metadata:
      labels:
        k8s-app: tectonic-monitoring-auth-alertmanager
    spec:
      containers:
      - name: auth-proxy
        image: ${tectonic_monitoring_auth_image}
        args:
        - '-provider=oidc'
        - '-client-id=$(CLIENT_ID)'
        - '-client-secret=$(CLIENT_SECRET)'
        - '-cookie-secret=$(COOKIE_SECRET)'
        - '-external-url=${alertmanager_external_url}'
        - '-proxy-prefix=/auth'
        - '-pass-host-header=true'
        - '-pass-user-headers=true'
        - '-pass-basic-auth=false'
        - '-cookie-name=_tectonic_monitoring_auth'
        - '-cookie-domain=${console_base_address}'
        - '-cookie-expire=8h0m0s'
        - '-email-domain=*'
        - '-redirect-url=${alertmanager_callback}'
        - '-oidc-issuer-url=$(OIDC_ISSUER_URL)'
        - '-http-address=http://0.0.0.0:4180'
        - '-upstream=http://alertmanager-main.tectonic-system.svc:9093'
        - '-ssl-insecure-skip-verify'
        ports:
        - name: http
          containerPort: 4180
        readinessProbe:
          httpGet:
            path: /ping
            port: 4180
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /ping
            port: 4180
          initialDelaySeconds: 5
          periodSeconds: 5
