modules/tectonic/resources/manifests/monitoring/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-main
  namespace: tectonic-system
  labels:
    k8s-app: alertmanager
    alertmanager: main
spec:
  type: ClusterIP
  selector:
    app: alertmanager
    alertmanager: main
  ports:
  - name: web
    port: 9093
    targetPort: 9093
    protocol: TCP
