modules/tectonic/resources/manifests/monitoring/prometheus-operator-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator
  namespace: tectonic-system
  labels:
    k8s-app: prometheus-operator
spec:
  type: ClusterIP
  selector:
    k8s-app: prometheus-operator
  ports:
  - name: http
    port: 8080
    targetPort: http
