modules/tectonic/resources/manifests/monitoring/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: tectonic-system
  labels:
    name: prometheus
spec:
  selector:
    prometheus: k8s
  type: ClusterIP
  ports:
  - name: prometheus
    port: 9090
    targetPort: 9090
    protocol: TCP
