modules/tectonic/resources/manifests/monitoring/tectonic-monitoring-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
    ingress.kubernetes.io/rewrite-target: "/"
    kubernetes.io/ingress.class: tectonic
  name: tectonic-monitoring-ingress
  namespace: tectonic-system
spec:
  rules:
  - host: ${console_base_address}
    http:
      paths:
      - backend:
          serviceName: tectonic-monitoring-auth-prometheus
          servicePort: 4180
        path: /prometheus
      - backend:
          serviceName: tectonic-monitoring-auth-alertmanager
          servicePort: 4180
        path: /alertmanager
  tls:
  - hosts:
    - ${console_base_address}
    secretName: tectonic-ingress-tls-secret
